fixed sloth image on safari browsers

--- a/WhatTheHack/static/styles/landing.css
+++ b/WhatTheHack/static/styles/landing.css
@@ -9,6 +9,7 @@
   -webkit-flex-direction: column; 
   flex-direction: column;
   z-index: 20;
+  min-height: 700px;
   max-height: 1080px;
 }
 
