--- a/WhatTheHack/static/styles/wth.css
+++ b/WhatTheHack/static/styles/wth.css
@@ -151,6 +151,7 @@ b{
 
 #sloth{
     min-width: 100px;
+    width:100%;
     max-height: 400px;
 }
 
